# rust-staticlib-linker

./: Cargo.toml  LICENSE  README.md  ldscript-musl.template
src/: main.rs
