[package]
name = "rust-staticlib-linker"
version = "0.1.0"
authors = ["Baojun Wang <wangbj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.0"
ar = "0.7"
tar = "0.4"
clap = "2.33"
env_logger = "0.6"
log = "0.4"
lazy_static = "1.3"